# message_transmitter

./: CMakeLists.txt  README.md  build.sh  clean.sh
common/: UDPClientSocket.h  UDPServerSocket.h  common.cpp  common.h  log.cpp  log.h  message_format.h  tcp_server.cpp  tcp_server.h  tcp_socket.cpp  tcp_socket.h  udp_socket.cpp  udp_socket.h
udp_receiver/: CMakeLists.txt  bst_api.h  bst_impl.cpp  bst_impl.h  client.cpp  client.h  container.cpp  container.h  main.cpp  test_container_functional.cpp  test_container_functional.h  test_threads_model.cpp  test_threads_model.h
udp_sender/: CMakeLists.txt  main.cpp  server.cpp  server.h
